[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scripts/GrappleLine.gd" type="Script" id=3]
[ext_resource path="res://Sounds/BoostUp.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/BoostDown.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/SuperBoostUp.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/GrappleOn.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/GrappleMissed.wav" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]

resource_name = "Fly"
length = 1.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}

[sub_resource type="Animation" id=2]

resource_name = "Grapple"
length = 1.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4, 3 ]
}

[sub_resource type="GDScript" id=3]

script/source = "extends Line2D

func _process(delta):
	points[1] = $\"..\".velocity / 20
"

[node name="Player" type="Sprite" index="0"]

texture = ExtResource( 1 )
hframes = 6
script = ExtResource( 2 )
_sections_unfolded = [ "Animation" ]

[node name="GrappleLine" type="Line2D" parent="." index="0"]

z_index = 1
z_as_relative = false
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 1008354452
sharp_limit = 2.0
round_precision = 8
script = ExtResource( 3 )
_sections_unfolded = [ "Border", "Capping", "Fill", "Transform", "Z Index" ]

[node name="Anim" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Fly = SubResource( 1 )
anims/Grapple = SubResource( 2 )
blend_times = [  ]

[node name="VelocityLine" type="Line2D" parent="." index="2"]

visible = false
z_index = 1
z_as_relative = false
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0.171875, 1, 0, 1 )
texture_mode = 1008354452
sharp_limit = 2.0
round_precision = 8
script = SubResource( 3 )
_sections_unfolded = [ "Z Index" ]

[node name="BoostUp" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="BoostDown" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="SuperBoostUp" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="GrappleOn" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="GrappleMissed" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"


